force-app/main/default/objects/Service_Indicator__c.object
<CustomObject>
    <fields>
        <fullName>SI_Code__c</fullName>
        <description>[Peoplesoft] - Examples include: A10, A11, A12, A13, A14, A15, A16, AA1, AD1, AD2, AD3, AD4, AD5, AD6, AD7, AD8, AD9</description>
        <label>Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SI_Description__c</fullName>
        <description>[Peoplesoft] - Examples include: Academic Administrative Hold, Admin Hold, Administrative Hold, Admissions Hold, Admissions Hold 1 Semester, Admissions VIP, Advising Applied Arts &amp; Sci, Advising Business, Advising Design, Advising Education</description>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SI_End_Date__c</fullName>
        <description>[Peoplesoft] - End date of the term</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SI_End_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>[Salesforce] - Look up to Term object</description>
        <label>End Term</label>
        <referenceTo>Term__c</referenceTo>
        <relationshipLabel>Service Indicators (End Term)</relationshipLabel>
        <relationshipName>Service_Indicators_End_Term</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SI_Positive_Service_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Within the import query based on the type of code that is listed, the field will be checked TRUE for those positive service indicators.</description>
        <label>Positive Service Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SI_Reason__c</fullName>
        <description>[Peoplesoft] - Admin hold by Student Affairs, Admin Hold Conversion, Admin hold due to med/comp wd, Billing Suspended, File is complete, Refunding Suspended, Registrar Admin Hold, Registrar Administrative Hold</description>
        <label>Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SI_Start_Date__c</fullName>
        <description>[Peoplesoft] - Start date of the term</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SI_Start_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>[Salesforce] - Look up to Term object</description>
        <label>Start Term</label>
        <referenceTo>Term__c</referenceTo>
        <relationshipLabel>Service Indicators</relationshipLabel>
        <relationshipName>Service_Indicators_Start_Term</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SI_Contact__c</fullName>
        <description>[Peoplesoft] - Relationship to contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Indicators</relationshipLabel>
        <relationshipName>Service_Indicators_Contact</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Service Indicator</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>Service Indicator Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Indicators</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>