force-app/main/default/objects/Service_Indicator__c/fields/Enrollment_Impact__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Impact__c</fullName>
    <businessOwnerGroup>Data_Owner_Campus_Community</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Service indicator where matching SRVC_IND_CD on PS_SERVICE_IMPACT SERVICE_IMPACT LIKE '%ENR'</description>
    <label>Enrollment Impact</label>
    <type>Checkbox</type>
</CustomField>