force-app/main/default/objects/Service_Indicator__c/fields/SI_Instructions__c.field-meta.xml
<CustomField>
    <fullName>SI_Instructions__c</fullName>
    <businessOwnerGroup>Data_Owner_Student_Business_Services</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>Service Indicator Reason Instructions from PS_SRVC_IN_RSN_TBL.DESCRLONG (CLOB)</description>
    <label>Instructions</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>